[tool.poetry]
name = "scrape"
version = "0.1.0"
description = ""
authors = ["redsalt <auomou.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.8.3"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
vertexai = "^1.71.1"
google-cloud = "^0.34.0"
google-cloud-language = "^2.16.0"
opencv-python = "^4.11.0.86"
torch = "^2.5.1"
torchvision = "^0.20.1"
pytorchvideo = "^0.1.5"
timm = "^1.0.14"
transformers = "^4.48.1"
deepseek-vl = "^0.0.1.dev0"
deepseek = "^1.0.0"
videodb = "^0.2.10"
pandas = "^2.3.3"
icecream = "^2.1.8"
joblib = "^1.5.2"
selenium = "^4.38.0"
geopy = "^2.4.1"
pyarrow = "^22.0.0"
langchain-community = "^0.4.1"
langchain = "^1.0.5"
langchain-text-splitters = "^1.0.0"
jsonschema = "4.23.0"
chromadb = "^1.3.4"
langchain-ollama = "^1.0.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
