[tool.poetry]
name = "scrape"
version = "0.1.0"
description = ""
authors = ["redsalt <auomou.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
pandas = "^2.3.3"
joblib = "^1.5.2"
geopy = "^2.4.1"
langchain-text-splitters = "^1.0.0"
langchain-ollama = "^1.0.0"
fuzzywuzzy = "^0.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
deptry = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
